--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,6 +22,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Analysing the code with pylint
-      run: |
-        pylint --fail-under=8 $(git ls-files '*.py')
+    #- name: Analysing the code with pylint
+    #  run: |
+    #    pylint --fail-under=8 $(git ls-files '*.py')
