--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: docker
 
 on: 
   push:
@@ -8,16 +8,16 @@ jobs:
   build:
   
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
     
     steps:
+    - name: Checkout Repository
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
+    
+    - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
