--- a/.github/workflows/unittestDevelopment.yml
+++ b/.github/workflows/unittestDevelopment.yml
@@ -1,8 +1,12 @@
 name: unittestDevelopment
 
-on: 
+on:
+  pull_request:
+    branches:
+      - development
   push:
-    branches: [development]
+    branches:
+      - development
 
 jobs:
   test:
