--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m venv ATY
+        ATY\Scripts\activate
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     #- name: Analysing the code with pylint
