--- a/.github/workflows/unittestDevelopment.yml
+++ b/.github/workflows/unittestDevelopment.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          python -m venv ATY
+          ATY\Scripts\activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
