--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,11 +17,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
-
-    - name: Install dependencies
+    - name: Create and activate venv
       run: |
         python -m venv ATY
-        ATY\Scripts\activate
+        source ATY/bin/activate
+        
+    - name: Install dependencies
+      run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     #- name: Analysing the code with pylint
