--- a/.github/workflows/unittestDevelopment.yml
+++ b/.github/workflows/unittestDevelopment.yml
@@ -21,10 +21,13 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install Dependencies
+      - name: Create and activate venv
         run: |
           python -m venv ATY
-          ATY\Scripts\activate
+          source ATY/bin/activate
+
+      - name: Install Dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
