--- a/.github/workflows/dockerDev.yml
+++ b/.github/workflows/dockerDev.yml
@@ -13,14 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-docker@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          dockerfile: Dockerfile
-          context: .
+          python-version: 3.11
+
+      - name: Install Docker CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io
 
       - name: Build Docker image
         run: docker build -t dockerDevOps .
