--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -3,10 +3,10 @@ name: testDevelopment
 on:
   pull_request:
     branches:
-      - development
+      - test
   push:
     branches:
-      - development
+      - test
 
 jobs:
   test:
