--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -1,15 +1,15 @@
-name: testDevelopment
+name: dockerDev
 
 on:
   pull_request:
     branches:
-      - test
+      - development
   push:
     branches:
-      - test
+      - development
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,36 +21,17 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Create and activate venv
-        run: |
-          python -m venv ATY
-          source ATY/bin/activate
-
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
-      - name: Start Uvicorn
-        run: |
-          gunicorn -k uvicorn.workers.UvicornWorker
+      - name: Build Docker image
+        run: docker build -t dockerdevops --build-arg POSTMAN_API_KEY=${{ secrets.POSTMAN_API_KEY }} .
 
       - name: Run pytest
         run: |
-          pytest
+          docker run dockerdevops pytest
 
       - name: Check pytest result
         if: always()  # This ensures the step runs even if previous steps fail
         run: exit $(test -f pytest-failed && cat pytest-failed || echo 0)
 
-      - uses: actions/checkout@v3
-      - name: Install Postman CLI
-        run: |
-          curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
-      
-      - name: Login to Postman CLI
-        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
-      
       - name: Run API tests
         run: |
-          postman collection run 31958413-1cb25a67-2a7b-42e8-bbe8-16bd8c1463ee
+          docker run dockerdevops postman collection run 31958413-1cb25a67-2a7b-42e8-bbe8-16bd8c1463ee
