--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,26 +6,20 @@ on:
 
 jobs:
   build:
-  
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout Repository
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
-    - name: Create and activate venv
-      run: |
-        python -m venv ATY
-        source ATY/bin/activate
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+
+      - name: Build Docker image
+        run: docker build -t dockerdevops
+
     #- name: Analysing the code with pylint
     #  run: |
     #    pylint --fail-under=8 $(git ls-files '*.py')
