--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -24,9 +24,12 @@ jobs:
       - name: Build Docker image
         run: docker build -t dockerdevops --build-arg POSTMAN_API_KEY=${{ secrets.POSTMAN_API_KEY }} .
 
+      - name: Run Docker container
+      run: docker run dockerdevops
+
       - name: Run pytest
         run: |
-          docker run dockerdevops pytest
+          pytest
 
       - name: Check pytest result
         if: always()  # This ensures the step runs even if previous steps fail
@@ -34,4 +37,4 @@ jobs:
 
       - name: Run API tests
         run: |
-          docker run dockerdevops postman collection run 31958413-1cb25a67-2a7b-42e8-bbe8-16bd8c1463ee
+          postman collection run 31958413-1cb25a67-2a7b-42e8-bbe8-16bd8c1463ee
