--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -22,13 +22,12 @@ jobs:
           python-version: 3.11
 
       - name: compose Docker image
-        run: docker compose up --build-arg POSTMAN_API_KEY=${{ secrets.POSTMAN_API_KEY }} .
+        env:
+          POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
+        run: docker compose up --build
 
      # - name: Build Docker image
      #   run: docker build -t dockerdevops --build-arg POSTMAN_API_KEY=${{ secrets.POSTMAN_API_KEY }} .
-
-      - name: Run Docker container
-        run: docker run dockerdevops
 
       - name: Run pytest
         run: |
