--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,12 @@ services:
     environment:
       DATABASE_URL: postgresql://user-name:strong-password@db/tapi
 
+  postman:
+    build:
+      context: .
+      args:
+        - POSTMAN_API_KEY=${POSTMAN_API_KEY}
+
 volumes:
   local_pgdata:
   pgadmin-data:
