--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -21,10 +21,11 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: compose Docker image
+      - name: Build and Run Docker Compose
         env:
           POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
-        run: docker compose up --build
+        run: |
+          docker-compose up --build
 
      # - name: Build Docker image
      #   run: docker build -t dockerdevops --build-arg POSTMAN_API_KEY=${{ secrets.POSTMAN_API_KEY }} .
