--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,10 @@ services:
   postman:
     build:
       context: .
-      args:
-        - POSTMAN_API_KEY_ARG=${POSTMAN_API_KEY}
+      dockerfile: dockerfile  # Specify the correct Dockerfile name
+      target: postman
+    environment:
+      POSTMAN_API_KEY: ${POSTMAN_API_KEY}
 
   api:
     build:
