--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,8 @@ services:
   postman:
     build:
       context: .
-      dockerfile: dockerfile  # Specify the correct Dockerfile name
-      target: postman
-    environment:
-      POSTMAN_API_KEY: ${POSTMAN_API_KEY}
+      args:
+        - POSTMAN_API_KEY_ARG=${POSTMAN_API_KEY}
 
   api:
     build:
