--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -22,9 +22,12 @@ jobs:
           python-version: 3.11
 
       - name: compose Docker image
-        env:
-          POSTMAN_API_KEY: ${{ secrets.POSTMAN_API_KEY }}
-        run: docker compose up --build
+        run: |
+          docker compose up --build
+      
+      - name: run test postman
+        run: |
+          docker run -t postman/newman_alpine33 run https://www.getpostman.com/collections/8a0c9bc08f062d12dcda
 
      # - name: Build Docker image
      #   run: docker build -t dockerdevops --build-arg POSTMAN_API_KEY=${{ secrets.POSTMAN_API_KEY }} .
