--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: 3.11
 
       - name: Build Docker image
-        run: docker build -t dockerdevops
+        run: docker build -t dockerdevops .
 
       - name: Run Docker container
         run: docker run dockerdevops
