moved uvicorn start to dockercompose

--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -21,11 +21,9 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Build Docker image
-        run: docker build -t dockerdevops .
-
-      - name: Run Docker container
-        run: docker run dockerdevops
+      - name: compose Docker image
+        run: |
+          docker compose up --build
       
       - name: run test postman
         run: |
