--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     volumes:
       - .:/api
     environment:
-      DATABASE_URL: postgresql://user-name:strong-password@db/test
+      DATABASE_URL: postgresql://user-name:strong-password@db/api
 
 
 volumes:
