--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -1,12 +1,12 @@
 name: dockerDev
 
-on:
-  pull_request:
-    branches:
-      - development
-  push:
-    branches:
-      - development
+#on:
+#  pull_request:
+#    branches:
+#      - development
+#  push:
+#    branches:
+#      - development
 
 jobs:
   build:
