--- a/dockerfiletesting
+++ b/dockerfiletesting
@@ -23,5 +23,13 @@ COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 EXPOSE 8000
 EXPOSE 5432
 
+# Install Supervisor
+RUN apt-get update && \
+    apt-get install -y supervisor && \
+    rm -rf /var/lib/apt/lists/*
+
+# Find the path to supervisord
+RUN which supervisord
+
 # Start Supervisor
 CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
