--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -31,6 +31,13 @@ jobs:
         run: |
           docker build -t api-test -f dockerfiletesting .
           docker run -d --name api-container -p 8000:8000 --network=host api-test
+      
+      -name: check database healty
+        healthcheck:
+          test: ["CMD-SHELL", "pg_isready"]
+          interval: 5s
+          timeout: 5s
+          retries: 5
 
       - name: Wait for API to be ready
         run: docker exec api-container sh -c 'while [ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8000)" != "200" ]; do sleep 1; done'
