--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -28,6 +28,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Configure PostgreSQL Container
+        run: |
+          docker exec db sh -c 'echo "host all all 0.0.0.0/0 md5" >> /var/lib/postgresql/data/pg_hba.conf'
+          docker exec db sh -c 'echo "listen_addresses = '"'"'*'"'"'" >> /var/lib/postgresql/data/postgresql.conf'
+
+      # Add a step to run a SQL command
+      - name: Run SQL Command on PostgreSQL
+        run: |
+          docker exec db psql -h localhost -U user-name -d api -c "SELECT version();"
+
+
       - name: Build and run Docker containers
         run: |
           docker build -t api-test -f dockerfiletesting .
