supervisor to run pytest

--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -28,27 +28,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Configure PostgreSQL Container
-        run: |
-          docker exec db sh -c 'echo "host all all 0.0.0.0/0 md5" >> /var/lib/postgresql/data/pg_hba.conf'
-          docker exec db sh -c 'echo "listen_addresses = '"'"'*'"'"'" >> /var/lib/postgresql/data/postgresql.conf'
-
-      # Add a step to run a SQL command
-      - name: Run SQL Command on PostgreSQL
-        run: |
-          docker exec db psql -h localhost -U user-name -d api -c "SELECT version();"
-
-
       - name: Build and run Docker containers
         run: |
-          docker build -t api-test -f dockerfiletesting .
+          docker build -t api-test .
           docker run -d --name api-container -p 8000:8000 --network=host api-test
 
       - name: Wait for API to be ready
         run: docker exec api-container sh -c 'while [ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8000)" != "200" ]; do sleep 1; done'
 
       - name: Run Pytest
-        run: docker exec api-container sh -c 'pytest tests/'
+        run: |
+          touch supervisord.conf
 
       - name: Cleanup
         run: |
