--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,20 +1,14 @@
+cat > supervisord.conf << EOL
 [supervisord]
-nodaemon=true
 
-[program:api]
-command=uvicorn app.main:app --host=0.0.0.0 --port=8000
-autostart=true
-autorestart=true
-stdout_logfile=/dev/fd/1
+[fcgi-program:uvicorn]
+socket=tcp://localhost:8000
+command=/opt/hostedtoolcache/Python/3.10.13/x64/bin/uvicorn --fd 0 src.main:app
+numprocs=4
+process_name=uvicorn-%(process_num)d
+stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
-
-[program:db]
-command=postgres
-autostart=true
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
+EOL
+supervisord
+sleep 3
+pytest
