updated python version

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ cat > supervisord.conf << EOL
 
 [fcgi-program:uvicorn]
 socket=tcp://localhost:8000
-command=/opt/hostedtoolcache/Python/3.10.13/x64/bin/uvicorn --fd 0 src.main:app
+command=/opt/hostedtoolcache/Python/3.10.13/x64/bin/uvicorn --fd 0 app.main:app
 numprocs=4
 process_name=uvicorn-%(process_num)d
 stdout_logfile=/dev/stdout
