--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Tag image 
         run:
           docker tag api \
-          registry.digitalocean.com/dev-ops-novi-api/api:${{github.event.inputs.version }}
+          registry.digitalocean.com/dev-ops-novi-api/api:test
       
       - name: Push image to DO Container Registry 
-        run: docker push registry.digitalocean.com/dev-ops-novi-api/api:${{ github.event.inputs.version }}
+        run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
