--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,7 @@ jobs:
         run: doctl registry login --expiry-seconds 600
       
       - name: Tag image 
-        run:
-          docker tag api \
-          registry.digitalocean.com/dev-ops-novi-api/api:test
+        run: docker tag api registry.digitalocean.com/dev-ops-novi-api/api:test
       
       - name: Push image to DO Container Registry 
         run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
