--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,19 @@ jobs:
       
       - name: Push image to DO Container Registry 
         run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
+
+      - name: authorize cluster
+        run: doctl registry kubernetes-manifest | kubectl apply -f -
+      - name: deploy app
+        run: |
+          kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "registry-<your-registry-name>"}]}'
+          kubectl create deployment api --image=registry.digitalocean.com/dev-ops-novi-api
+      - name: verify replica set
+        run: kubectl get rs
+      - name: expose using loadbalancer
+        run: kubectl expose deployment api --type=LoadBalancer --port=80 --target-port=80
+
+
+
+
+
