--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,10 @@ jobs:
         run: doctl registry login --expiry-seconds 600
       
       - name: Tag image 
-        run: docker tag api registry.digitalocean.com/dev-ops-novi-api/api:test2
+        run: docker tag api registry.digitalocean.com/dev-ops-novi-api/api:test
       
       - name: Push image to DO Container Registry 
-        run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test2
+        run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
 
       - name: authorize cluster
         run: doctl registry kubernetes-manifest | kubectl apply -f -
