--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ orjson==3.9.10
 packaging==23.2
 pluggy==1.3.0
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==2.5.2
 pydantic-extra-types==2.2.0
 pydantic-settings==2.1.0
