--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build image 
-        run: docker build -t api .
+        run: docker build -t apitest .
 
       - name: Install doctl 
         uses: digitalocean/action-doctl@v2
@@ -25,21 +25,21 @@ jobs:
         run: doctl registry login --expiry-seconds 600
       
       - name: Tag image 
-        run: docker tag api registry.digitalocean.com/dev-ops-novi-api/api:test
+        run: docker tag apitest registry.digitalocean.com/dev-ops-novi-api/apitest:test
       
       - name: Push image to DO Container Registry 
-        run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
+        run: docker push registry.digitalocean.com/dev-ops-novi-api/apitest:test
 
       - name: authorize cluster
         run: doctl registry kubernetes-manifest | kubectl apply -f -
       - name: deploy app
         run: |
           kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "registry-<your-registry-name>"}]}'
-          kubectl create deployment api --image=registry.digitalocean.com/dev-ops-novi-api
+          kubectl create deployment apitest --image=registry.digitalocean.com/dev-ops-novi-api
       - name: verify replica set
         run: kubectl get rs
       - name: expose using loadbalancer
-        run: kubectl expose deployment api --type=LoadBalancer --port=80 --target-port=80
+        run: kubectl expose deployment apitest --type=LoadBalancer --port=80 --target-port=80
 
 
 
