--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Run Pytest
         run: |
+         touch supervisord.conf
           cat > supervisord.conf << EOL
           [supervisord]
 
