--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -21,13 +21,13 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: compose Docker image
+      - name: Compose Docker image
         run: |
-          docker compose up --build -d
-  
+          docker-compose up --build -d
+
       - name: Run pytest
         run: |
-          pytest
+          docker exec -t api pytest
 
       - name: Check pytest result
         if: always()  # This ensures the step runs even if previous steps fail
