--- a/.github/workflows/testDevelopment.yml
+++ b/.github/workflows/testDevelopment.yml
@@ -26,8 +26,8 @@ jobs:
           docker compose up --build -d
 
       - name: Run pytest
-        run: |
-          docker exec -t api pytest
+      run: |
+        docker-compose exec api pytest
 
       - name: Check pytest result
         if: always()  # This ensures the step runs even if previous steps fail
