--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Run Pytest
         run: |
-          pip install supervisor, pytest
+          pip install supervisor
+          pip install pytest
           
           touch supervisord.conf
           cat > supervisord.conf << EOL
