--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Run Pytest
         run: |
-          pip install requirements.txt
+          pip install -r requirements.txt
           
           touch supervisord.conf
           cat > supervisord.conf << EOL
