--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -26,10 +26,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Dependencies
+      - name: Build and run Docker containers
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          docker build -t api-test .
+          docker run -d --name api-container -p 8000:8000 --network=host api-test
+
+      - name: Wait for API to be ready and start test
+        run: |
+          docker exec api-container sh -c 'while [ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8000)" != "200" ]; do sleep 1; done'    
 
       - name: Run pytest
         run: |
