--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -19,7 +19,7 @@ jobs:
     restart: always
     ports:
       - "5432:5432"
-    environment:
+    env:
       POSTGRES_USER: user-name
       POSTGRES_PASSWORD: strong-password
       POSTGRES_DB: api
@@ -48,7 +48,7 @@ jobs:
       - name: Wait for API to be ready and start test
         run: |
           docker exec api-container sh -c 'while [ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8000)" != "200" ]; do sleep 1; done'  
-        environment:
+        env:
           DATABASE_URL: postgresql://user-name:strong-password@db/api  
 
       - name: Run pytest
