--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -23,11 +23,7 @@ jobs:
           - 5432:5432
         volumes:
           - local_pgdata:/var/lib/postgresql/data
-        healthcheck:
-          test: ["CMD-SHELL", "pg_isready"]
-          interval: 5s
-          timeout: 5s
-          retries: 5
+        options: --health-cmd "pg_isready" --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
