--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -35,7 +35,8 @@ jobs:
       - name: run Docker containers
         run: |
           docker run -d --name api-container -p 8000:8000 --network=host api
-
+          
       - name: Run pytest
         run: |
+          sleep 30
           docker exec api-container pytest
