--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -35,8 +35,11 @@ jobs:
       - name: run Docker containers
         run: |
           docker run -d --name api-container -p 8000:8000 --network=host api
-          
+
+      - name: Wait for API to be ready and start test
+        run: |
+          docker exec api-container sh -c 'while [ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8000)" != "200" ]; do sleep 1; done'    
+
       - name: Run pytest
         run: |
-          sleep 30
           docker exec api-container pytest
