--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,1 +1,31 @@
-
+name: pipeline
+on:
+  push:
+    branches:
+      - 'development'
+jobs:
+  deploy:
+    name: build && push image to docker hub
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: 'development'
+    
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v2
+    
+      - name: docker login
+        uses: docker/login-action@v2
+        with:
+          username: ybnovi
+          password: dckr_pat_SbEedAwlcyvNpNa2TUG6d7JAwUk
+      
+      - name: build and push api
+        id: build-push-api
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: dockerfile
+          push: true
+          tags: ybnovi/novi-api:api
