--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: 'development'
+          ref: development
     
       - name: setup docker buildx
         uses: docker/setup-buildx-action@v2
