--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -18,12 +18,24 @@ jobs:
 
       - name: Compose docker db container
         run: |
-          docker compose up db -d
+          docker-compose up -d db
+          # Wait for the db container to be healthy
+          until docker inspect --format "{{json .State.Health.Status }}" db | grep -q healthy; do
+            echo "Waiting for db container to be healthy..."
+            sleep 5
+          done
+          echo "db container is healthy!"
 
       - name: Compose docker api container
         run: |
-          docker compose up api -d
+          docker-compose up -d api
+          # Wait for the api container to be healthy
+          until docker inspect --format "{{json .State.Health.Status }}" api | grep -q healthy; do
+            echo "Waiting for api container to be healthy..."
+            sleep 5
+          done
+          echo "api container is healthy!"
       
       - name: Run pytest
         run: |
-          pytest
+          docker exec api pytest
