--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: Compose docker db container
         run: |
-          docker-compose up -d db
-          # Wait for the db container to be healthy
+          docker-compose up db -d
+          
           until docker inspect --format "{{json .State.Health.Status }}" db | grep -q healthy; do
             echo "Waiting for db container to be healthy..."
             sleep 5
@@ -28,8 +28,8 @@ jobs:
 
       - name: Compose docker api container
         run: |
-          docker-compose up -d api
-          # Wait for the api container to be healthy
+          docker-compose up api -d
+          
           until docker inspect --format "{{json .State.Health.Status }}" api | grep -q healthy; do
             echo "Waiting for api container to be healthy..."
             sleep 5
