--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -26,4 +26,4 @@ jobs:
       
       - name: Run pytest
         run: |
-          docker exec api pytest
+          docker compose run api pytest tests/
