--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Compose docker db container
+      - name: Compose docker
         run: |
-          docker compose up db -d
+          docker compose up -d
 
-      - name: Compose docker api container
+      - name: check docker names
         run: |
-          docker compose up api -d
+          docker ps
       
       - name: Run pytest
         run: |
-          docker compose run api pytest tests/
+          docker exec devops-novi-api-1 pytest tests/
