--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,20 +12,11 @@ jobs:
         with:
           ref: development
     
-      - name: setup docker buildx
-        uses: docker/setup-buildx-action@v2
-    
-      - name: docker login
-        uses: docker/login-action@v2
-        with:
-          username: ybnovi
-          password: dckr_pat_SbEedAwlcyvNpNa2TUG6d7JAwUk
-      
-      - name: build and push api
-        id: build-push-api
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: dockerfile
-          push: true
-          tags: ybnovi/novi-api:api
+      - name: Compose docker
+        run: docker compose up -d
+
+      - name: check docker names
+        run: docker ps
+
+      - name: access localhost
+        run: curl http://localhost:8000
