--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,4 +19,4 @@ jobs:
         run: docker ps
 
       - name: access localhost
-        run: curl http://localhost:8000
+        run: curl http://0.0.0.0:8000
