--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -7,7 +7,8 @@ on:
   push:
     branches:
       - development
- 
+env:
+  DATABASE_URL: postgresql://user-name:strong-password@host.docker.internal:5432/api
 jobs:
   integration_tests:
     runs-on: ubuntu-latest
@@ -16,8 +17,8 @@ jobs:
       db:
         image: postgres
         env:
-          POSTGRES_USER: user-name
-          POSTGRES_PASSWORD: strong-password
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: strong
           POSTGRES_DB: api
         ports:
           - 5432:5432
@@ -39,3 +40,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: run pytest
+        run: |
+          pytest
