--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - development
 env:
-  DATABASE_URL: postgresql://user-name:strong-password@host.docker.internal:5432/api
+  DATABASE_URL: postgresql://user-name:strong-password@localhost:5432/api
 jobs:
   integration_tests:
     runs-on: ubuntu-latest
