--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -18,7 +18,7 @@ jobs:
         image: postgres
         env:
           POSTGRES_USER: user
-          POSTGRES_PASSWORD: strong
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: api
         ports:
           - 5432:5432
