--- a/.github/workflows/integrationtest.yml
+++ b/.github/workflows/integrationtest.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - development
 env:
-  DATABASE_URL: postgresql://user:password@localhost:5432/api
+  DATABASE_URL: postgresql://user-name:strong-password@localhost:5432/api
 jobs:
   integration_tests:
     runs-on: ubuntu-latest
@@ -17,8 +17,8 @@ jobs:
       db:
         image: postgres
         env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
+          POSTGRES_USER: user-name
+          POSTGRES_PASSWORD: strong-password
           POSTGRES_DB: api
         ports:
           - 5432:5432
