--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,18 +30,21 @@ jobs:
       - name: Push image to DO Container Registry 
         run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
 
+      - name: Run image 
+        run: docker run registry.digitalocean.com/dev-ops-novi-api/api:test
+
+      - name: create cluster
+        run: doctl kubernetes cluster create api-cluster --tag api --auto-upgrade=true --node-pool "name=api-pool;count=2;auto-scale=true;min-nodes=1;max-nodes=3;tag=api"
       - name: authorize cluster
         run: doctl registry kubernetes-manifest | kubectl apply -f -
+
       - name: deploy app
         run: |
-          kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "registry-<your-registry-name>"}]}'
-          kubectl create deployment api --image=registry.digitalocean.com/dev-ops-novi-api
+          kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "registry-dev-ops-novi-api"}]}'
+          kubectl create deployment api --image=registry.digitalocean.com/dev-ops-novi-api/api:test
+
       - name: verify replica set
         run: kubectl get rs
+        
       - name: expose using loadbalancer
         run: kubectl expose deployment api --type=LoadBalancer --port=80 --target-port=80
-
-
-
-
-
