--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,11 @@ jobs:
       - name: Push image to DO Container Registry 
         run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
 
-      - name: Run image 
-        run: docker run registry.digitalocean.com/dev-ops-novi-api/api:test
+      - name: see available dbs
+        run: doctl databases
+
+      # - name: Run image 
+      #   run: docker run registry.digitalocean.com/dev-ops-novi-api/api:test -e DATABASE_URL={doctl databases connection <database-id> [flags]}
 
       - name: create cluster
         run: doctl kubernetes cluster create api-cluster --tag api --auto-upgrade=true --node-pool "name=api-pool;count=2;auto-scale=true;min-nodes=1;max-nodes=3;tag=api"
