--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: doctl databases list
 
       - name: connect to database
-        run: doctl databases connection $(doctl databases list --format ID --no-header)
+        run: doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header
 
       # - name: Run image 
       #   run: docker run registry.digitalocean.com/dev-ops-novi-api/api:test -e DATABASE_URL={doctl databases connection <database-id> [flags]}
